--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
-  },
+  }, 
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
